# crew-herbal-article-creator-deployment

./: README.md
herbal_article_creator/: .env.example  .gitignore  pyproject.toml  requirements.txt
herbal_article_creator/data/credentials/: settings.yaml
herbal_article_creator/data/json/: Herbal_processing.json  Herbs_traditional_Thai_medicine_in_the_lives_of_Thai_people.json  Nutrition_in_Thai_wisdom.json
herbal_article_creator/knowledge/: user_preference.txt
herbal_article_creator/outputs/: research_paper.docx
herbal_article_creator/project-documents/: analyze_trends_task.md  audit_data_integrity_task.md  audit_strategy_task.md  check_compliance_task.md  consolidation_task.md  convert_docx_task.md  cultural_internal_knowledge_task.md  find_clinical_toxicity_task.md  find_safety_data_task.md  herbal_internal_knowledge_task.md  laboratory_data_task.md  planner_task.md  raw_extraction_culture_task.md  research_evidence_task.md  translation_and_synthesis_culture_task.md  upload_docx_task.md  write_article_task.md
herbal_article_creator/src/herbal_article_creator/: __init__.py  crew.py  main.py
herbal_article_creator/src/herbal_article_creator/benchmark/: README.md  __init__.py  llm_factory.py  report.py  runner.py
herbal_article_creator/src/herbal_article_creator/config/: agents_production.yaml  tasks_production.yaml
herbal_article_creator/src/herbal_article_creator/tools/: browse_website_tools.py  common_rag.py  docx_tools.py  docx_tools_manually.py  fda_tools.py  gdrive_browse_for_rag.py  gdrive_upload_file_tools.py  pinecone_tools.py  pubmed_tools.py  (+4 more)
(+19 files in other folders)
