[project]
name = "herbal_article_creator"
version = "0.1.0"
description = "Intelligent Agent System for Generating Thai Herbal Articles to support Modern Wellness Applications"
authors = [{ name = "Suttipong Kullawattana", email = "suttipong.kul@dome.tu.ac.th" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0",

    # Search
    "tavily-python>=0.5.0",

    #Call API Service
    "requests>=2.32.0",

    # LangChain
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=1.0.0",
    
    # Vector Store
    "chromadb>=0.4.22",
    
    # PDF Processing
    "pymupdf>=1.23.0",
    "pypdfium2>=4.26.0", 
    "pdfplumber>=0.10.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.scripts]
herbal_article_creator = "herbal_article_creator.main:run"
run_crew = "herbal_article_creator.main:run"
train = "herbal_article_creator.main:train"
replay = "herbal_article_creator.main:replay"
test = "herbal_article_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"